use emcommon to determine survey prompted
Instead of duplicating the survey-selection logic, it is now central and located in emcommon

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -84,6 +84,8 @@
     "import pandas as pd\n",
     "from xml.dom import minidom\n",
     "\n",
+    "from emcommon.survey import conditional_surveys\n",
+    "\n",
     "from plots import *\n",
     "import scaffolding\n",
     "import re\n",
@@ -208,32 +210,6 @@
     "    \n",
     "    return labels\n",
     "\n",
-    "#input: pt - set of coordinates in 1d array, bounds - 2 points in 2-d array\n",
-    "#output: boolean if point is within the bounding box\n",
-    "#this function is a pythonized version of the one in the phone code - good candidate for common lib\n",
-    "def pointIsWithinBounds(pt, bounds): \n",
-    "    #pt's lon must be east of, or greater than, NW's lon; and west of, or less than, SE's lon\n",
-    "    lonInRange = pt[0] > bounds[0][0] and pt[0] < bounds[1][0];\n",
-    "    #pt's lat must be south of, or less than, NW's lat; and north of, or greater than, SE's lat\n",
-    "    latInRange = pt[1] < bounds[0][1] and pt[1] > bounds[1][1];\n",
-    "    \n",
-    "    return latInRange and lonInRange;\n",
-    "\n",
-    "#input: single row of dataframe\n",
-    "#output: T/F evaluation of the conditon\n",
-    "#eval_string is re-defined for each survey\n",
-    "def filter_fn(row, eval_string):\n",
-    "    funcs = {'pointIsWithinBounds': pointIsWithinBounds}\n",
-    "    row_vars = row.to_dict()\n",
-    "    \n",
-    "    try:\n",
-    "        result = eval(eval_string, funcs, row_vars)\n",
-    "    #if unable to evaluate row, assume not a match (handle old surveys!)\n",
-    "    except:\n",
-    "        result = False\n",
-    "\n",
-    "    return result\n",
-    "\n",
     "#create a debug dataframe\n",
     "def generate_debug_df(program, include_test_users, full_df, labeled_df):\n",
     "    debug_df = pd.DataFrame.from_dict({\n",
@@ -324,33 +300,19 @@
     "#create the total dfs\n",
     "total_dfs = {}\n",
     "#for conditional surveys!\n",
+    "wrapped_config = {'survey_info': survey_info}\n",
     "if 'buttons' in survey_info.keys():\n",
-    "    #gather the eval strings\n",
-    "    eval_strings = {}\n",
-    "    for item in survey_info['buttons']['trip-label']:\n",
-    "        if 'showsIfPy' in item.keys():\n",
-    "            eval_strings[item['surveyName']] = item['showsIfPy']\n",
+    "    all_composite_trips['survey_name_prompted'] = all_composite_trips.apply(lambda row: conditional_surveys.survey_prompted_for_trip(row.to_dict(), wrapped_config), axis=1)\n",
+    "    \n",
+    "    for survey_name in list(sheet_list.keys()):\n",
+    "        if survey_name in all_composite_trips['survey_name_prompted'].unique():\n",
+    "            total_dfs[survey_name] = all_composite_trips[all_composite_trips['survey_name_prompted'] == survey_name]\n",
     "        else:\n",
-    "            raw_string = item['showsIf']\n",
-    "            expression = raw_string.replace('&&', 'and')\n",
-    "            expression = expression.replace('||', 'or')\n",
-    "            expression = re.sub(r\"!(?!=)\", \"not \", expression)\n",
-    "            eval_strings[item['surveyName']] = expression\n",
-    "\n",
-    "    #use eval strings to build \"total\" dataframes\n",
-    "    for name, eval_string in eval_strings.items():\n",
-    "        meets_bools = all_composite_trips.apply(lambda x: filter_fn(x, eval_string), axis=1)\n",
-    "        df = all_composite_trips[meets_bools]\n",
-    "\n",
-    "        total_dfs[name] = df\n",
-    "        \n",
+    "            #never prompted\n",
+    "            total_dfs[survey_name] = pd.DataFrame()\n",
     "else:\n",
     "    survey_name = list(sheet_list.keys())[0] #there is only one if non-conditional\n",
-    "    total_dfs[survey_name] = all_composite_trips\n",
-    "\n",
-    "# uncomment to check total dataframes\n",
-    "for key in total_dfs.keys():\n",
-    "    print(key, len(total_dfs[key]))"
+    "    total_dfs[survey_name] = all_composite_trips"
    ]
   },
   {
