add color mapping to surveys
this mapping will keep responses that appear in different surveys the same color, keep the same chart from having the same color twice (unless a given survey has 20 different answers), and in the case of multiple selections being encountered, colors that segment of the chart the "average" of all the answers collected

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -285,6 +285,9 @@
     "print(\"Questions dictionary:\\n\",quest_dict)\n",
     "print(\"Options dictionary:\\n\", opt_dict)\n",
     "\n",
+    "#color dictionary\n",
+    "color_map = scaffolding.mapping_color_surveys(opt_dict)\n",
+    "\n",
     "#format survey trips into responses dataframe\n",
     "df_responses = create_dataframe(survey_trips)\n",
     "file_suffix = scaffolding.get_file_suffix(year, month, program)"
@@ -345,7 +348,7 @@
     "            labels = traslate_options(quest_frame[col].value_counts(dropna=True).keys().tolist(), opt_dict)\n",
     "            values = quest_frame[col].value_counts(dropna=True).tolist()\n",
     "\n",
-    "            pie_chart_purpose(plot_title, labels, values, filename)\n",
+    "            pie_chart_purpose(plot_title, labels, values, color_map, filename)\n",
     "            alt_text = store_alt_text_pie(pd.DataFrame(values, labels), filename, plot_title)\n",
     "\n",
     "        except:\n",
