--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -270,6 +270,7 @@
     "\n",
     "    #only want trips with sections\n",
     "    all_composite_trips = all_composite_trips[all_composite_trips['sections'].str.len() > 0]\n",
+    "    print(len(all_composite_trips), \"trips with sections\")\n",
     "else:\n",
     "    survey_trips = pd.DataFrame()"
    ]
@@ -316,7 +317,10 @@
     "            total_dfs[survey_name] = pd.DataFrame()\n",
     "else:\n",
     "    survey_name = list(sheet_list.keys())[0] #there is only one if non-conditional\n",
-    "    total_dfs[survey_name] = all_composite_trips"
+    "    total_dfs[survey_name] = all_composite_trips\n",
+    "    \n",
+    "for key in total_dfs.keys():\n",
+    "    print(key, \":\", len(total_dfs[key]), \"trips\", total_dfs[key].user_id.nunique(), \"users\")"
    ]
   },
   {
@@ -356,6 +360,13 @@
     "            generate_missing_plot(plot_title_no_quality, debug_df, filename)\n",
     "            alt_text = store_alt_text_missing(debug_df, filename, plot_title_no_quality)"
    ]
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e59ca0d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
