move if conditions
The if condition preventing duplication only worked for some cases, move the if inside the cases to prevent errors on different configurations

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -159,12 +159,14 @@
     "                    survey_questions[str(label.parentNode.getAttribute(\"ref\").split('/')[-1])] = label.firstChild.data\n",
     "            \n",
     "            if label.parentNode.nodeName == 'item':\n",
-    "                if label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data not in opt_dict.keys(): #prevent overwriting\n",
-    "                    if label.parentNode.parentNode.getAttribute(\"appearance\") == \"likert\":\n",
+    "                if label.parentNode.parentNode.getAttribute(\"appearance\") == \"likert\":\n",
+    "                    if label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data not in opt_dict.keys():\n",
     "                        opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data\n",
-    "                    elif label.parentNode.getElementsByTagName(\"value\"):\n",
+    "                elif label.parentNode.getElementsByTagName(\"value\"):\n",
+    "                    if label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data not in opt_dict.keys():\n",
     "                        opt_dict[label.parentNode.getElementsByTagName(\"value\")[0].firstChild.data] = label.firstChild.data  \n",
-    "                    elif label.parentNode.getElementsByTagName(\"name\"):\n",
+    "                elif label.parentNode.getElementsByTagName(\"name\"):\n",
+    "                    if label.parentNode.getElementsByTagName(\"name\")[0].firstChild.data not in opt_dict.keys():\n",
     "                        opt_dict[label.parentNode.getElementsByTagName(\"name\")[0].firstChild.data] = label.firstChild.data  \n",
     "        \n",
     "        quest_dict[survey_name] = survey_questions\n",
