clean up inputs cell
removed the sample survey_info, this is added into the notebook for testing or passed in when the notebook is run

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -13,62 +13,9 @@
     "study_type = \"study\"\n",
     "mode_of_interest = 'e-bike'\n",
     "include_test_users = False\n",
-    "dynamic_labels = {  }\n",
+    "dynamic_labels = {}\n",
     "use_imperial = False\n",
-    "\n",
-    "#probably going to end up passing this in\n",
-    "survey_info =  {\n",
-    "    \"surveys\": {\n",
-    "      \"UserProfileSurvey\": {\n",
-    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-onboarding-v0.xml\",\n",
-    "        \"version\": 1,\n",
-    "        \"compatibleWith\": 1,\n",
-    "        \"dataKey\": \"manual/demographic_survey\",\n",
-    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
-    "      },\n",
-    "      \"DfcEvReturnTrip\": {\n",
-    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-ev-return-trip-v0.xml\",\n",
-    "        \"version\": 1,\n",
-    "        \"compatibleWith\": 1,\n",
-    "        \"dataKey\": \"manual/trip_user_input\",\n",
-    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
-    "      },\n",
-    "      \"DfcEvRoamingTrip\": {\n",
-    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-ev-roaming-trip-v0.xml\",\n",
-    "        \"version\": 1,\n",
-    "        \"compatibleWith\": 1,\n",
-    "        \"dataKey\": \"manual/trip_user_input\",\n",
-    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
-    "      },\n",
-    "      \"DfcGasTrip\": {\n",
-    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-gas-trip-v0.xml\",\n",
-    "        \"version\": 1,\n",
-    "        \"compatibleWith\": 1,\n",
-    "        \"dataKey\": \"manual/trip_user_input\",\n",
-    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
-    "      }\n",
-    "    },\n",
-    "    \"buttons\": {\n",
-    "      \"trip-label\": [\n",
-    "        {\n",
-    "          \"surveyName\": \"DfcGasTrip\",\n",
-    "          \"not-filled-in-label\": { \"en\": \"Gas Car Survey\" },\n",
-    "          \"showsIf\": \"sections[0]['sensed_mode_str'] == 'CAR'\"\n",
-    "        },\n",
-    "        {\n",
-    "          \"surveyName\": \"DfcEvRoamingTrip\",\n",
-    "          \"not-filled-in-label\": { \"en\": \"EV Survey\" },\n",
-    "          \"showsIf\": \"sections[0]['sensed_mode_str'] != 'CAR' && !pointIsWithinBounds(end_loc['coordinates'], [[-105.153, 39.745], [-105.150, 39.743]])\"\n",
-    "        },\n",
-    "        {\n",
-    "          \"surveyName\": \"DfcEvReturnTrip\",\n",
-    "          \"not-filled-in-label\": { \"en\": \"EV Survey\" },\n",
-    "          \"showsIf\": \"sections[0]['sensed_mode_str'] != 'CAR' && pointIsWithinBounds(end_loc['coordinates'], [[-105.153, 39.745], [-105.150, 39.743]])\"\n",
-    "        }\n",
-    "      ]\n",
-    "    },\n",
-    "    \"trip-labels\": \"ENKETO\"\n",
-    "  }"
+    "survey_info =  {}"
    ]
   },
   {
