change condition for the debug dataframe
Error when running these charts from the command line caused by empty dataframe that still had columns

Prevented the error by checking that the dataframe was not empty as well as for the column

--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -156,7 +156,7 @@
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title)\n",
     "    print(expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].primary_mode.value_counts(dropna=True))\n",
     "except:\n",
-    "    d10_df = expanded_ct.query(\"distance <= \" + cutoff) if \"distance\" in expanded_ct.columns else expanded_ct\n",
+    "    d10_df = expanded_ct.query(\"distance <= \" + str(cutoff)) if 'distance' in expanded_ct.columns and len(expanded_ct) > 0 else expanded_ct\n",
     "    debug_df.loc[\"Trips_less_than_80th_pct\"] = scaffolding.trip_label_count(\"Mode_confirm\", d10_df)\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
