1. Remove consolidated list of dataframes call to plot_stacked_bar_chart. 2. Introduce empty initialization of dataframes. 3. Remove bar_counts and all_data_frames. 4. Introduce call to add_stacked_bar_chart_title().

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -46,6 +46,7 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "from plots import *\n",
     "import scaffolding\n",
@@ -177,16 +178,14 @@
     "file_name = f'ntrips_total{file_suffix}'\n",
     "\n",
     "try:\n",
-    "    bar_count = 0\n",
-    "    all_data_frames = []\n",
     "    all_data_frames_expanded = []\n",
+    "    df_confirmed_tc = pd.DataFrame()\n",
+    "    df_sensed_tc_sensed = pd.DataFrame()\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "\n",
     "    if not expanded_ct.empty:\n",
     "        df_confirmed_tc_expanded, df_confirmed_tc = process_data_frame(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Confirmed trips)\")\n",
     "        if not df_confirmed_tc.empty:\n",
-    "            bar_count += 1\n",
-    "            all_data_frames.append(df_confirmed_tc)\n",
     "            all_data_frames_expanded.append(df_confirmed_tc_expanded)\n",
     "        else:\n",
     "            print(\"df_confirmed_tc is empty.\")\n",
@@ -196,15 +195,17 @@
     "    if not expanded_ct_sensed.empty:\n",
     "        df_sensed_tc_expanded, df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Total trips)\")\n",
     "        if not df_sensed_tc.empty:\n",
-    "            bar_count += 1\n",
-    "            all_data_frames.append(df_sensed_tc)\n",
     "            all_data_frames_expanded.append(df_sensed_tc_expanded)\n",
     "        else:\n",
     "            print(\"df_sensed_tc is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty\")\n",
     "\n",
-    "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
+    "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
+    "    plot_stacked_bar_chart(df_confirmed_tc, \"Confirmed Trip\", ax[0], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_sensed_tc,  \"Sensed Trip\", ax[1], colors_combined)\n",
+    "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
+    "\n",
     "    result_df = pd.concat(all_data_frames_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)  \n",
     "except:\n",
@@ -231,18 +232,17 @@
     "file_name = f'ntrips_under80{file_suffix}'\n",
     "\n",
     "try:\n",
-    "    bar_count = 0\n",
-    "    all_data_frames_u80 = []\n",
+    "    df_confirmed_tc_u80 = pd.DataFrame()\n",
+    "    df_sensed_tc_u80 = pd.DataFrame()\n",
     "    all_data_frames_u80_expanded = []\n",
     "    plot_title = plot_title_no_quality\n",
     "\n",
     "    if not expanded_ct.empty:\n",
     "        df_confirmed_tc_u80_expanded, df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct,'Mode_confirm', distance_col, \"Labeled by user\\n (Confirmed trips)\")\n",
+    "        print(f\"{cutoff} \\n {dist_threshold} \\n {distance_col}\")\n",
     "        u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"<= \" + dist_threshold + \" \" + short_label, include_test_users)\n",
     "        if not df_confirmed_tc_u80.empty:\n",
     "            plot_title +=  \"\\n\" + \"For Labeled: \" + u80_quality_text\n",
-    "            bar_count += 1\n",
-    "            all_data_frames_u80.append(df_confirmed_tc_u80)\n",
     "            all_data_frames_u80_expanded.append(df_confirmed_tc_u80_expanded)\n",
     "        else:\n",
     "            print(\"df_confirmed_tc_u80 is empty.\")\n",
@@ -254,15 +254,17 @@
     "        u80_quality_text_sensed = scaffolding.get_quality_text_sensed(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff_sensed], \"<= \" + dist_threshold_sensed + \" \" + short_label , include_test_users)\n",
     "        if not df_sensed_tc_u80.empty:\n",
     "            plot_title +=  \"\\n\" + \"For Sensed: \" + u80_quality_text_sensed\n",
-    "            bar_count += 1\n",
-    "            all_data_frames_u80.append(df_sensed_tc_u80)\n",
     "            all_data_frames_u80_expanded.append(df_sensed_tc_u80_expanded)\n",
     "        else:\n",
     "            print(\"df_sensed_tc_u80 is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
-    "    plot_stacked_bar_chart(all_data_frames_u80, colors_combined, bar_count, plot_title, file_name)\n",
+    "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
+    "    plot_stacked_bar_chart(df_confirmed_tc_u80, \"Confirmed Trip\", ax[0], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_sensed_tc_u80,  \"Sensed Trip\", ax[1], colors_combined)\n",
+    "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
+    "\n",
     "    result_df = pd.concat(all_data_frames_u80_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
@@ -289,8 +291,7 @@
     "file_name = f\"ntrips_commute_mode_confirm{file_suffix}\"\n",
     "\n",
     "try:\n",
-    "    bar_count = 0\n",
-    "    all_data_frames_commute = []\n",
+    "    df_total_trip_commute = pd.DataFrame()\n",
     "    all_data_frames_commute_expanded = []\n",
     "    plot_title = plot_title_no_quality\n",
     "    if (len(dynamic_labels)):\n",
@@ -302,17 +303,18 @@
     "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(trip_purpose_query), \"commute\", include_test_users)\n",
     "\n",
     "    if not expanded_ct.empty:\n",
-    "        bar_count += 1\n",
     "        plot_title += \"\\n\" + \"For Labeled: \" + commute_quality_text\n",
     "\n",
     "    labels_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
     "    values_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
     "\n",
     "    df_total_trip_commute_expanded, df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user\\n (Confirmed trips)\")\n",
-    "    all_data_frames_commute.append(df_total_trip_commute)\n",
     "    all_data_frames_commute_expanded.append(df_total_trip_commute_expanded)\n",
     "\n",
-    "    plot_stacked_bar_chart(all_data_frames_commute, colors_combined, bar_count, plot_title, file_name)\n",
+    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    plot_stacked_bar_chart(df_total_trip_commute, \"Commute Trip\", ax, colors_combined)\n",
+    "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
+    "\n",
     "    # Maintain this style as other metric stacked bar charts\n",
     "    result_df = pd.concat(all_data_frames_commute_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
@@ -340,16 +342,14 @@
     "file_name = f\"total_trip_length{file_suffix}\"\n",
     "\n",
     "try:\n",
-    "    bar_count = 0\n",
-    "    all_data_frames = []\n",
+    "    df_confirm_dist = pd.DataFrame()\n",
+    "    df_sensed_dist = pd.DataFrame()\n",
     "    all_data_frames_expanded = []\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "\n",
     "    if not expanded_ct.empty:\n",
     "        df_confirm_dist_expanded, df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', distance_col, label_units_lower, \"Labeled by user\\n (Trip distance)\")\n",
     "        if not df_confirm_dist.empty:\n",
-    "            bar_count += 1\n",
-    "            all_data_frames.append(df_confirm_dist)\n",
     "            all_data_frames_expanded.append(df_confirm_dist_expanded)\n",
     "        else:\n",
     "            print(\"df_confirm_dist is empty.\")\n",
@@ -359,15 +359,17 @@
     "    if not expanded_ct_sensed.empty:\n",
     "        df_sensed_dist_expanded, df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
     "        if not df_sensed_dist.empty:\n",
-    "            bar_count += 1\n",
-    "            all_data_frames.append(df_sensed_dist)\n",
     "            all_data_frames_expanded.append(df_sensed_dist_expanded)\n",
     "        else:\n",
     "            print(\"df_sensed_dist is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
-    "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
+    "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
+    "    plot_stacked_bar_chart(df_confirm_dist, \"Confirmed Trip\", ax[0], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_sensed_dist,  \"Sensed Trip\", ax[1], colors_combined)\n",
+    "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
+    "\n",
     "    result_df = pd.concat(all_data_frames_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
@@ -394,16 +396,14 @@
     "file_name = f\"total_trip_length_land{file_suffix}\"\n",
     "\n",
     "try:\n",
-    "    bar_count = 0\n",
-    "    all_data_frames = []\n",
+    "    df_confirm_dist_land = pd.DataFrame()\n",
+    "    df_sensed_dist_land = pd.DataFrame()\n",
     "    all_data_frames_expanded = []\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
     "        df_confirm_dist_land_expanded, df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"], 'Mode_confirm',distance_col, label_units_lower, \"Labeled by user\\n (Trip distance - Land)\")\n",
     "        if not df_confirm_dist_land.empty:\n",
-    "            bar_count += 1\n",
-    "            all_data_frames.append(df_confirm_dist_land)\n",
     "            all_data_frames_expanded.append(df_confirm_dist_land_expanded)\n",
     "        else:\n",
     "            print(\"df_confirm_dist_land is empty.\")\n",
@@ -413,15 +413,17 @@
     "    if not expanded_ct_sensed.empty:\n",
     "        df_sensed_dist_land_expanded, df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode',distance_col, label_units_lower, \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
     "        if not df_sensed_dist_land.empty:\n",
-    "            bar_count += 1\n",
-    "            all_data_frames.append(df_sensed_dist_land)\n",
     "            all_data_frames_expanded.append(df_sensed_dist_land_expanded)\n",
     "        else:\n",
     "            print(\"df_sensed_dist_land is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
-    "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
+    "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
+    "    plot_stacked_bar_chart(df_confirm_dist_land, \"Confirmed Trip\", ax[0], colors_combined)\n",
+    "    plot_stacked_bar_chart(df_sensed_dist_land,  \"Sensed Trip\", ax[1], colors_combined)\n",
+    "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
+    "\n",
     "    result_df = pd.concat(all_data_frames_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
@@ -448,8 +450,7 @@
     "file_name = f\"ntrips_purpose{file_suffix}\"\n",
     "\n",
     "try:\n",
-    "    bar_count = 0\n",
-    "    all_tp_data_frames = []\n",
+    "    df_purpose_trip = pd.DataFrame()\n",
     "    all_tp_data_frames_expanded = []\n",
     "    plot_title = plot_title_no_quality\n",
     "\n",
@@ -457,15 +458,16 @@
     "        df_purpose_trip_expanded, df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose', \"Labeled by user\\n (Confirmed trips)\")\n",
     "        if not df_purpose_trip.empty:\n",
     "            plot_title += \"\\n\" + \"For Labeled: \" + quality_text\n",
-    "            bar_count += 1\n",
-    "            all_tp_data_frames.append(df_purpose_trip)\n",
     "            all_tp_data_frames_expanded.append(df_purpose_trip_expanded)\n",
     "        else:\n",
     "            print(\"df_purpose_trip is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
-    "    plot_stacked_bar_chart(all_tp_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
+    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    plot_stacked_bar_chart(df_purpose_trip, \"Confirmed Trip\", ax, colors_combined)\n",
+    "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
+    "\n",
     "    result_df = pd.concat(all_tp_data_frames_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
