1. Remove consolidated list of dataframes call to plot_stacked_bar_chart. 2. Introduce empty initialization of dataframes. 3. Remove bar_counts and all_data_frames. 4. Introduce call to add_stacked_bar_chart_title() for mode_specific_metrics notebook.

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -191,8 +191,7 @@
     "file_name= f\"ntrips_{mode_of_interest}_purpose{file_suffix}\"\n",
     "\n",
     "try:\n",
-    "    bar_count = 0\n",
-    "    all_tp_data_frames = []\n",
+    "    df_purpose_trip_eb = pd.DataFrame()\n",
     "    all_tp_data_frames_expanded = []\n",
     "    plot_title = plot_title_no_quality\n",
     "\n",
@@ -200,15 +199,16 @@
     "        df_purpose_trip_eb_expanded, df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', f\"Labeled `{mode_of_interest}` by user\")\n",
     "        if not df_purpose_trip_eb.empty:\n",
     "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
-    "            bar_count += 1\n",
-    "            all_tp_data_frames.append(df_purpose_trip_eb)\n",
     "            all_tp_data_frames_expanded.append(df_purpose_trip_eb_expanded)\n",
     "        else:\n",
     "            print(\"df_purpose_trip_eb is empty.\")\n",
     "    else:\n",
     "        print(\"data_eb is empty.\")\n",
     "\n",
-    "    plot_stacked_bar_chart(all_tp_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
+    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    plot_stacked_bar_chart(df_purpose_trip_eb, f\"{mode_of_interest} trip\", ax, colors_combined)\n",
+    "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
+    "\n",
     "    result_df = pd.concat(all_tp_data_frames_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
@@ -235,8 +235,7 @@
     "file_name = f\"total_trip_length_{mode_of_interest}_replaced_mode{file_suffix}\"\n",
     "\n",
     "try:\n",
-    "    bar_count = 0\n",
-    "    all_data_frames = []\n",
+    "    df_replaced_dist = pd.DataFrame()\n",
     "    all_data_frames_expanded = []\n",
     "\n",
     "    plot_title = plot_title_no_quality\n",
@@ -244,8 +243,6 @@
     "    if not data_eb.empty:\n",
     "        df_replaced_dist_expanded, df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', distance_col, label_units_lower, f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
     "        if not df_replaced_dist.empty:\n",
-    "            bar_count += 1\n",
-    "            all_data_frames.append(df_replaced_dist)\n",
     "            all_data_frames_expanded.append(df_replaced_dist_expanded)\n",
     "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "        else:\n",
@@ -253,7 +250,10 @@
     "    else:\n",
     "        print(\"data_eb is empty.\")\n",
     "\n",
-    "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
+    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    plot_stacked_bar_chart(df_replaced_dist, f\"{mode_of_interest} trip\", ax, colors_combined)\n",
+    "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
+    "\n",
     "    result_df = pd.concat(all_data_frames_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
@@ -280,16 +280,13 @@
     "file_name = f'ntrips_{mode_of_interest}_total{file_suffix}'\n",
     "\n",
     "try:\n",
-    "    bar_count = 0\n",
-    "    all_data_frames = []\n",
+    "    df_replaced_tc = pd.DataFrame()\n",
     "    all_data_frames_expanded = []\n",
     "    plot_title = plot_title_no_quality\n",
     "\n",
     "    if not data_eb.empty:\n",
     "        df_replaced_tc_expanded, df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\" )\n",
     "        if not df_replaced_tc.empty:\n",
-    "            bar_count += 1\n",
-    "            all_data_frames.append(df_replaced_tc)\n",
     "            all_data_frames_expanded.append(df_replaced_tc_expanded)\n",
     "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "        else:\n",
@@ -297,7 +294,10 @@
     "    else:\n",
     "        print(\"data_eb is empty.\")\n",
     "\n",
-    "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
+    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    plot_stacked_bar_chart(df_replaced_tc, f\"{mode_of_interest} trip\", ax, colors_combined)\n",
+    "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
+    "\n",
     "    result_df = pd.concat(all_data_frames_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)  \n",
     "except:\n",
