--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -31,7 +31,7 @@
     "study_type = \"study\"\n",
     "include_test_users = False\n",
     "dynamic_labels = {}\n",
-    "use_imperial = False\n",
+    "use_imperial = True\n",
     "sensed_algo_prefix = \"cleaned\""
    ]
   },
